--- a/style.css
+++ b/style.css
@@ -1,71 +1,92 @@
+/* Set background */
 body {
     background-image: url("../Images/black.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 
+/* Page wrapper */
 #page-wrapper {
     width: 960px;
-    margin: 0 auto;
+    margin: 20px auto;
     box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
     border-radius: 12px 12px 0px 0px;
+    background-color: white;
+    overflow: hidden;
 }
 
+/* Header */
 #header {
     position: relative;
-    margin-top: 40px;
-    border-radius: 12px 12px 0px 0px;
     background-color: #333;
-    float: left;
-    width: 100%;
+    padding: 20px 0;
+    text-align: center;
+    border-radius: 12px 12px 0px 0px;
 }
 
 #header h1 {
-    position: absolute;
-    left: 420px;
-    top: 5px;
     font-size: 3em;
     font-family: 'Devonshire', cursive;
     color: #E35335;
 }
 
-#header a#logo1 img {
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-bottom: 20px;
+/* Navigation */
+#main-nav {
+    background: #444;
+    text-align: center;
+    padding: 10px 0;
 }
 
-#header #toplink {
-    text-decoration: none;
-    position: absolute;
-    top: -34px;
-    right: 10px;
+#main-nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#main-nav ul li {
+    display: inline;
+    margin-right: 15px;
+}
+
+#main-nav ul li a {
     color: white;
-    font-size: 1.8em;
+    padding: 10px 15px;
+    display: inline-block;
+    text-decoration: none;
 }
 
-#footer {
-    background-color: #777;
-    height: 80px;
-    clear: both;
+#main-nav ul li a:hover {
+    background-color: #ccc;
+    color: #333;
 }
 
+/* Main content wrapper */
 #content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
     background-image: url("../Images/repeating.png");
-    float: left;
 }
 
+/* Main content */
 #main-content {
-    min-height: 300px;
-    width: 715px;
-    margin-right: 30px;
-    float: left;
-    margin-left: 15px;
+    width: 70%;
+    background: white;
+    padding: 20px;
 }
 
-h2 strong {
-    font-size: 2em;
-    font-weight: 900;
+/* Sidebar */
+#side-content {
+    width: 25%;
+    background: #f4f4f4;
+    padding: 10px;
+    border-radius: 10px;
 }
 
+/* Image alignment */
 .image-r {
     float: right;
     border: 2px solid blue;
@@ -75,35 +96,12 @@ h2 strong {
     margin: 10px 0 10px 20px;
 }
 
-#side-content {
-    min-height: 150px;
-    width: 200px;
-    float: left;
-}
-
-#main-nav {
-    float: left;
+/* Footer */
+#footer {
+    background-color: #777;
+    text-align: center;
+    padding: 15px 0;
     position: relative;
-    right: 50%;
-}
-
-#main-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    float: left;
-    position: relative;
-    left: 50%;
-}
-
-#main-nav ul li a {
-    padding: 10px 25px;
-    display: block;
-    text-decoration: none;
-    color: #ccc;
-}
-
-#main-nav ul li a:hover {
-    background-color: #ccc;
-    color: #333;
+    width: 100%;
+    bottom: 0;
 }
